added redux integration for the web app!

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,15 @@
     "webpack:server": "webpack-dev-server",
     "webpack:build": "tsc && webpack --progress --config webpack.config.js"
   },
+  "keywords": [
+    "react",
+    "create-react-app",
+    "template",
+    "typescript",
+    "redux",
+    "reduxjs",
+    "react-redux"
+  ],
   "author": "Saif Ul Islam",
   "license": "MIT",
   "dependencies": {
@@ -25,6 +34,9 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -46,6 +58,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "install-peerdeps": "^3.0.0",
+    "jest-dom": "^4.0.0",
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.20",
     "merge": "^2.1.0",
@@ -58,6 +71,7 @@
     "sass-loader": "^10.1.1",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
+    "svg-inline-loader": "^0.8.2",
     "ts-import-plugin": "^1.6.7",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
