--- a/server/Tests/SomeClass.Tests/SomeClass.Tests.csproj
+++ b/server/Tests/SomeClass.Tests/SomeClass.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SomeClass\SomeClass.csproj" />
+  </ItemGroup>
+
 </Project>
