--- a/client/package.json
+++ b/client/package.json
@@ -23,15 +23,21 @@
   "author": "Saif Ul Islam",
   "license": "MIT",
   "dependencies": {
-    "antd": "^4.11.2",
+    "bootstrap": "^4.6.0",
+    "connected-react-router": "^6.8.0",
+    "history": "4.10.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
