--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,16 @@
-FROM microsoft/aspnetcore
-CMD [ "dotnet", 'publish', '-c', 'Release']
-COPY ./bin/Release/net5.0/publish App/
-WORKDIR /App
-ENTRYPOINT [ "dotnet", "NetCore.Docker.dll" ]
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+WORKDIR /app
+
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
+
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+WORKDIR /app
+COPY --from=build-env /app/out .
+ENTRYPOINT ["dotnet", "server.dll"]
