fix docker compose for root and client - everything integrates together!

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
-FROM node
+FROM node:10
 
 WORKDIR /App
 
 COPY ./package.json ./yarn.lock /App/
 
-RUN yarn
+RUN yarn && yarn add node-sass@4.14.1 && npm rebuild node-sass
 
 COPY ./ /App/
 
