--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,30 +11,30 @@ services:
       - ./web-server/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:8080"
-    # depends_on:
-    #   - client
-    #   - server
-    #   - smtp
-    #   - postgres
-    #   - mongo
-    #   - cache  
+    depends_on:
+      - client
+      - server
+      - smtp
+      - postgres
+      - mongo
+      - cache        
 
-  # client:
-  #   container_name: client
-  #   build: ./client
-  #   stdin_open: true
-  #   restart: always
-  #   volumes:
-  #     - "./client:/App"
-  #   ports:
-  #     - "3000:3000"
+  client:
+    container_name: client
+    build: ./client
+    stdin_open: true
+    restart: always
+    volumes:
+      - "./client:/App"
+    ports:
+      - "3000:3000"
 
   server:
     container_name: backend
     build: ./server
     restart: always
     volumes:
-      - "./server:/Backend"      
+      - "./server:/backend"      
     ports:
       - "5000:5000" # For HTTP
       - "5001:5001" # For HTTPS
