make file and docker compose changes to build project

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "connected-react-router": "^6.8.0",
+    "dotenv": "^8.2.0",
     "history": "4.10.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
