--- a/web-server/conf.d/default.conf
+++ b/web-server/conf.d/default.conf
@@ -1,9 +1,14 @@
 server {
-  listen 8080;
-
+  listen 80;
+ 
   location /api/ {
-    proxy_pass  http://backend:5000/;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass http://localhost:80;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection keep-alive;
+    proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
