--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,7 +20,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
     paths-ignore:
-      - 'docs/**/**'
+      - './docs/**/**'
   schedule:
     - cron: '31 0 * * 4'
 
