--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "airbnb": "^0.0.2",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.2.0",
